--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "projeto-pesqueiro"
 version = "0.1.0"
-package-mode = false
+package-mode = true
 description = "Sistema de gestão integrada para pesqueiro (C14)"
-authors = ["Seu Nome <email@exemplo.com>"]
+authors = ["Tales Henrique retalesHMC@proton.me"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
